# Memory_allocator

./: .gitignore  CMakeLists.txt  README.md
include/memory_allocator/: begin_code.h  memory_manager.h
src/: CMakeLists.txt  memory_manager.c
test/: CMakeLists.txt  main_test.c
